# STARWEAVE-MVP

./: .directory  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: rust-ci.yml
benches/: similarity_benchmark.rs
docs/architecture/: 0001.md  0002-state-evolution.md  0003-modular-agents.md
scripts/: 000-foundation.sh  001-phase-1.sh  002-phase-2.sh  dev.sh
src/: agent_orchestrator.rs  lib.rs  main.rs
src/actions/: mod.rs
src/concepts/: mod.rs
src/embedding/: mod.rs
src/module_agent/: mod.rs
src/state/: mod.rs
tests/state/: state_tests.rs
